--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -23,9 +23,9 @@
                 <h4 class="mb-3">List des candidats</h4>
                 <br>
                 <br>
-              <form class="card p-2">
+              <form class="card p-2" action="/admin/search" method="post">
                 <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Rechercher un candidat">
+                  <input type="text" name="search" class="form-control" placeholder="Rechercher un candidat">
                   <div class="input-group-append">
                     <button type="submit" class="btn btn-secondary">Rechercher</button>
                   </div>
