--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -202,6 +202,7 @@
                           </tr>
                           </thead>
                           <tbody>
+                            <% if (licenses) { %>
                           <% licenses.forEach(function (license) { %>
                               <tr>
                                   <th scope="row"><%= license.id %></th>
@@ -210,7 +211,7 @@
                                   <td> <%= license.code %> </td>
                                   <td> <%= license.day %> / <%= license.month %> / <%= license.year %> </td>
                                   <td> <%= license.category %> </td>
-                                  <td> <%= license.delivery_date.toLocaleDateString() %> </td>
+                                  <td> <%= license.delivery_date? license.delivery_date.toLocaleDateString():'' %> </td>
                                   <td> <%= license.expert %> </td>
                                   <form method="POST" action="/admin/delete/<%- license.id %>?_method=DELETE">
                                       <input type="hidden" name="_method" value="delete">
@@ -224,6 +225,7 @@
                                   </form>
                               </tr>
                           <% }) %>
+                          <% } %>
                           </tbody>
                       </table>
                   </div>
