--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -12,7 +12,7 @@
         <div class="container">
           <div class="container-fluid">
             <div class="py-5 text-center">
-              <img class="d-block mx-auto mb-4" src="/img/bloc_marque.jpg" alt="">
+              <img class="100 mx-auto mb-4" src="/img/bloc_marque.jpg" alt="">
               <h2>Espace Administrateur</h2>
             </div>
             <div class="row">
