--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -216,10 +216,10 @@
                                   <td> <%= license.delivery_date? license.delivery_date:'' %> </td>
                                   <td> <%= license.expert %> </td>
                                   <td>
-                                      <a href="/download/<%=license.id%>" class="btn btn-secondary text-white">
+                                      <a href="/download/<%=license.id%>" class="btn btn-secondary text-white d-inline-block">
                                         <i class="fa fa-print fa-sm" aria-hidden="true"></i>
                                       </a>
-                                      <a href="/delete/<%=license.id%>" class="btn btn-danger text-white">
+                                      <a href="/delete/<%=license.id%>" class="btn btn-danger text-white d-inline-block">
                                           <i class="fa fa-trash fa-sm" aria-hidden="true"></i>
                                       </a>
                                   </td>
