--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -219,7 +219,7 @@
                                       <a href="/download/<%=license.id%>" class="btn btn-secondary text-white d-inline-block">
                                         <i class="fa fa-print fa-sm" aria-hidden="true"></i>
                                       </a>
-                                      <a href="/delete/<%=license.id%>" class="btn btn-danger text-white d-inline-block">
+                                      <a href="/admin/delete/<%=license.id%>" class="btn btn-danger text-white d-inline-block">
                                           <i class="fa fa-trash fa-sm" aria-hidden="true"></i>
                                       </a>
                                   </td>
