--- a/views/pdf.ejs
+++ b/views/pdf.ejs
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 <style type="text/css">
     .num{
-        font-family: 'Times New Roman', Times, serif;
+        font-family: fantasy;
     line-height: 1.024902;
     color: rgb(0,0,0);
     font-size: 22px;
